fea: Se continua con la migración de los archivos xhtml y se mejora Dockerfile