@@ -2,23 +2,63 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>co.edu.utp.gia.sms</groupId>
-		<artifactId>sms-builder</artifactId>
-		<version>3.0</version>
-	</parent>
+<!--	<parent>-->
+<!--		<groupId>co.edu.utp.gia.sms</groupId>-->
+<!--		<artifactId>sms-builder</artifactId>-->
+<!--		<version>3.0</version>-->
+<!--	</parent>-->
+	<groupId>co.edu.utp.gia.sms</groupId>
 	<artifactId>sms-builder-web</artifactId>
 	<packaging>war</packaging>
 	<name>SMS-Builder Web</name>
+	<version>3.0</version>
+	<properties>
+		<omnifaces.version>1.14.1</omnifaces.version>
+		<junit.jupiter.version>5.9.1</junit.jupiter.version>
+		<primefaces.version>13.0.0</primefaces.version>
+
+		<jsf-impl.version>2.3.9.SP08</jsf-impl.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<payaraVersion>6.2023.8</payaraVersion>
+		<microprofileVersion>6.0</microprofileVersion>
+		<maven.forceversion>3.6.3</maven.forceversion>
+		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+	</properties>
+	<prerequisites>
+		<maven>${maven.forceversion}</maven>
+	</prerequisites>
+
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.4.0</version>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>${maven.forceversion}</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 			<!-- Establecer la version de WAR -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>3.3.2</version>
+				<version>3.4.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -31,9 +71,29 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.26</version>
+							<version>1.18.28</version>
 						</path>
 					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.2</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.1.2</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -51,18 +111,8 @@
 				<configuration>
 					<payaraVersion>${payaraVersion}</payaraVersion>
 					<javaCommandLineOptions>
-<!--						<javaCommandLineOption>&#45;&#45;add-opens java.base/java.io=ALL-UNNAMED</javaCommandLineOption>-->
-<!--						<option>-->
-<!--							<key>&#45;&#45;add-opens java.base/java.io</key>-->
-<!--							<value>ALL-UNNAMED</value>-->
-<!--						</option>-->
-<!--						<javaCommandLineOption>&#45;&#45;add-opens java.base/java.io=ALL-UNNAMED</javaCommandLineOption>-->
-<!--						<javaCommandLineOption>&#45;&#45;add-exports java.base/jdk.internal.misc=ALL-UNNAMED</javaCommandLineOption>-->
 						<option><key>--add-opens</key><value>java.base/java.io=ALL-UNNAMED</value></option>
 						<option><key>--add-exports</key><value>java.base/jdk.internal.misc=ALL-UNNAMED</value></option>
-
-<!--						<option><value>&#45;&#45;add-opens java.base/java.io=ALL-UNNAMED</value></option>-->
-<!--						<option><value>&#45;&#45;add-exports java.base/jdk.internal.misc=ALL-UNNAMED</value></option>-->
 					</javaCommandLineOptions>
 					<commandLineOptions>
 						<option><value>--nocluster</value></option>
@@ -118,16 +168,6 @@
 		</plugins>
 	</build>
 
-	<properties>
-		<omnifaces.version>1.14.1</omnifaces.version>
-		<junit.jupiter.version>5.9.1</junit.jupiter.version>
-		<primefaces.version>13.0.0</primefaces.version>
-
-		<jsf-impl.version>2.3.9.SP08</jsf-impl.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<payaraVersion>6.2023.8</payaraVersion>
-		<microprofileVersion>6.0</microprofileVersion>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -210,6 +250,11 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.28</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.aeonbits.owner</groupId>
+			<artifactId>owner</artifactId>
+			<version>1.0.12</version>
 		</dependency>
 
 		<dependency>
